--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"dotenv": "^16.4.7",
 		"flash-sdk": "^2.24.3",
 		"form-data": "^4.0.1",
+		"helius-sdk": "^1.4.1",
 		"langchain": "^0.3.8",
 		"openai": "^4.77.0",
 		"typedoc": "^0.27.6",
